# -1

./: .gitignore  README.md  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json  server.ts  vite.config.ts
electron/: main.ts  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: fs-resource-read.json
src-tauri/sources/תלמוד בבלי/בבא בתרא/: בבא בתרא.txt  תוספות על בבא בתרא.txt
src-tauri/sources/תלמוד בבלי/בכורות/: תוספות על בכורות.txt
src-tauri/sources/תלמוד בבלי/ברכות/: ברכות.txt
src-tauri/sources/תלמוד בבלי/גיטין/: גיטין.txt  רשי על גיטין.txt
src-tauri/sources/תלמוד בבלי/הוריות/: תוספות על הוריות.txt
src-tauri/sources/תלמוד בבלי/זבחים/: רשי על זבחים.txt
src-tauri/sources/תלמוד בבלי/חולין/: רשי על חולין.txt  תוספות על חולין.txt
src-tauri/sources/תלמוד בבלי/יומא/: תוספות על יומא.txt
src-tauri/sources/תלמוד בבלי/מועד קטן/: מועד קטן.txt  תוספות על מועד קטן.txt
src-tauri/sources/תלמוד בבלי/מכות/: מכות.txt
src-tauri/sources/תלמוד בבלי/מנחות/: רשי על מנחות.txt
src-tauri/sources/תלמוד בבלי/מעילה/: מעילה.txt  רשי על מעילה.txt
src-tauri/sources/תלמוד בבלי/נדה/: רשי על נדה.txt  תוספות על נדה.txt
src-tauri/sources/תלמוד בבלי/נדרים/: רשי על נדרים.txt
src-tauri/sources/תלמוד בבלי/נזיר/: נזיר.txt
src-tauri/sources/תלמוד בבלי/סוכה/: רשי על סוכה.txt
src-tauri/sources/תלמוד בבלי/עבודה זרה/: עבודה זרה.txt  תוספות על עבודה זרה.txt
src-tauri/sources/תלמוד בבלי/עירובין/: רשי על עירובין.txt
src-tauri/src/: lib.rs  main.rs
(+119 files in other folders)
